fix scroll extra space

--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,8 @@
   color: CanvasText;
   color-scheme: dark;
 }
+
+html,
+body {
+  scrollbar-gutter: stable;
+}
